# spack-at-fnal

./: CMakeLists.txt  CMakePresets.json  README.md  requirements.txt  spack.yaml
.github/: copilot-instructions.md
.github/workflows/: deploy-docs.yml
doc/: CMakeLists.txt  conf.py.in  index.rst
doc/pages/: build_manager_process.rst  building_related_packages.rst  building_updated_packages.rst  layered_environments.rst  plan-for-standard-builds.rst  policy_on_spack_updates.rst  related_policy_documents.rst  using_bootstrap.rst  using_spack_mpd.rst
doc/static/: spackatfnal.css
doc/templates/: layout.html
release-configs/: art-specs.yaml  bar-specs.yaml  dune-packages.yaml  dune-release.yaml  exp-specs.yaml  fife-specs.yaml  foo-specs.yaml  hypot-develop-packages.yaml  hypot-packages.yaml  hypot-release.yaml  hypot-specs.yaml  icarus-specs.yaml  nusofthep-specs.yaml  packages-dune-develop.yaml  packages-dune.yaml  sbn-specs.yaml  sbnd-specs.yaml  specs-larsoft.yaml  unified-spack.yaml
release-configs/included_yaml/: packages-dune.yaml  specs-dune.yaml
ups/: product_deps  setup_for_development
